# CUDA-LLM-Inference-Engine

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  future.md  pyproject.toml  pytorch_baseline.json
benchmarks/: attention_bench.cu  cutlass_fmha_ref.cuh  decode_attention_bench.cu  gemm_bench.cu  int8_gemm_bench.cu  paged_attention_bench.cu  softmax_bench.cu
docs/superpowers/plans/: 2026-03-30-week1-gemm-foundation.md  2026-03-31-week2-advanced-gemm.md  2026-04-01-week3-softmax.md  2026-04-03-flash-attention-optimized.md  2026-04-03-week4-flash-attention.md  2026-04-04-week5-paged-attention-gqa.md  2026-04-05-week6-decode-attention-int8-gemm.md  2026-04-06-gpt2-inference-engine.md
docs/superpowers/specs/: 2026-03-30-cuda-llm-inference-kernels-design.md  2026-03-31-week2-advanced-gemm-design.md  2026-04-01-week3-softmax-design.md  2026-04-02-week4-flash-attention-design.md  2026-04-03-flash-attention-optimized-design.md  2026-04-04-week5-paged-attention-gqa-design.md  2026-04-05-week6-decode-attention-int8-gemm-design.md  2026-04-06-gpt2-inference-engine-design.md
include/: gpt2_types.cuh  sampler.cuh  timer.cuh  tokenizer.h  validator.cuh
kernels/decode/: 13_decode_attn.cu  13_decode_attn.cuh
kernels/flash_attention/: 10_flash_attn_v2.cu  10_flash_attn_v2.cuh  10b_flash_attn_v2_opt.cu  10b_flash_attn_v2_opt.cuh
kernels/gemm/: 01_naive.cu  01_naive.cuh  02_coalesced.cu  02_coalesced.cuh  03_shared_tiling.cu  03_shared_tiling.cuh  04_reg_tiling_1d.cu  04_reg_tiling_1d.cuh  05_reg_tiling_2d.cu  05_reg_tiling_2d.cuh  06_vectorized.cu  06_vectorized.cuh  07_double_buffered.cu  07_double_buffered.cuh
kernels/layernorm/: 15_embed.cu  15_embed.cuh  15_layernorm_residual.cu  15_layernorm_residual.cuh
kernels/paged_attention/: 11_paged_attn.cu  11_paged_attn.cuh  12_gqa.cu  12_gqa.cuh
kernels/quantization/: 14_int8_gemm.cu  14_int8_gemm.cuh
kernels/softmax/: 08_fused_online.cu  08_fused_online.cuh  09_warp_reduce.cu  09_warp_reduce.cuh
python/: benchmark_pytorch.py  export_gpt2.py
scripts/: demo_compare.sh
src/: gpt2_engine.cu  gpt2_engine.cuh  kv_cache.cu  main.cpp  main.cu  sampler.cu  tokenizer.cpp
tests/: test_attention.cu  test_decode_attention.cu  test_engine.cu  test_gemm.cu  test_int8_gemm.cu  test_layernorm.cu  test_paged_attention.cu  test_softmax.cu
